k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-verify
  labels:
    name: stock-verify
